--- a/rockpaperinteractive.html
+++ b/rockpaperinteractive.html
@@ -6,7 +6,7 @@
   <body>
 
     <p class="title">
-      !!Rock Papper Scissor Game!!
+      !!Rock Paper Scissors Game!!
     </p>
 
     <button class="game-button" onclick="
